# AWS-Admin

./: .gitignore  README.md  config.example.toml  pyproject.toml  pyrightconfig.json
docs/: implementation-summary.md  open-source-readiness-summary.md  usage.md
docs/superpowers/plans/: 2026-05-30-db-subcommand.md  2026-05-30-secure-amplify-secrets-cli.md  2026-06-01-open-source-readiness.md  2026-06-15-env-rotate.md
docs/superpowers/specs/: 2026-05-30-db-subcommand-design.md  2026-05-30-secure-amplify-secrets-cli-design.md  2026-06-01-open-source-readiness-design.md  2026-06-15-env-rotate-design.md
slash-commands/: aws-db-list.md  aws-db-run.md  aws-db-set-password.md  aws-env-diff.md  aws-env-edit.md  aws-env-pull.md  aws-env-push.md
src/aws_admin/: aws_client.py  cli.py  config.py  redact.py  vault.py
src/aws_admin/commands/: db.py  env.py
src/aws_admin/db/: connection.py  placeholders.py  queries.py  results.py  runner.py
src/aws_admin/queries/: unverified-users.sql  (+2 more)
tests/: conftest.py  test_aws_client.py  test_cli.py  test_cli_db.py  test_config_db.py  test_config_paths.py  test_config_resolve.py  test_config_resolve_apps.py  test_db_commands.py  test_db_connection.py  test_db_no_value_leak.py  test_db_placeholders.py  test_db_queries.py  test_db_results.py  test_db_runner.py  test_env_pull_diff.py  test_env_push.py  test_env_redeploy_edit.py  test_env_rotate.py  test_no_value_leak.py  test_redact_diff.py  test_vault_capture_value.py  test_vault_crypto.py  test_vault_db_password.py  test_vault_edit.py  test_vault_edit_buffer.py  test_vault_snapshot.py
